created the interests sections and finalized the layout and styling

--- a/index.html
+++ b/index.html
@@ -149,5 +149,65 @@
         <a href="Files/kim.pdf" download class="cv-btn">> download_cv.exe</a>
       </div>
     </section>
+    <!-- Interests Section -->
+    <section class="interests" id="interests">
+      <h2 class="section-title">> initializing interest_modules...</h2>
+      <p class="interests-intro">
+        These are the core drivers that keep my code flowing and curiosity
+        alive; The Living Pulse Behind Every Project I Build.
+      </p>
+
+      <div class="interest-grid">
+        <div class="interest-module blue">
+          <span class="icon">💻</span>
+          <h3>Web Development</h3>
+          <p>
+            Building responsive, user-focused interfaces that come to life on
+            every device.
+          </p>
+        </div>
+
+        <div class="interest-module red">
+          <span class="icon">🤖</span>
+          <h3>AI & Machine Learning</h3>
+          <p>
+            Exploring intelligent systems that mimic human thinking and
+            behavior.
+          </p>
+        </div>
+
+        <div class="interest-module green">
+          <span class="icon">🌐</span>
+          <h3>Open Source</h3>
+          <p>
+            Collaborating globally to build and contribute to impactful
+            software.
+          </p>
+        </div>
+
+        <div class="interest-module purple">
+          <span class="icon">🎨</span>
+          <h3>UI/UX Design</h3>
+          <p>
+            Crafting intuitive digital experiences with beauty and usability in
+            mind.
+          </p>
+        </div>
+
+        <div class="interest-module yellow">
+          <span class="icon">🚀</span>
+          <h3>Emerging Tech</h3>
+          <p>
+            Diving into the latest trends in web3, AR/VR, and edge computing.
+          </p>
+        </div>
+
+        <div class="interest-module cyan">
+          <span class="icon">🛡️</span>
+          <h3>Cybersecurity</h3>
+          <p>Protecting systems and learning the art of digital defense.</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
