Finalized the skills section

--- a/index.html
+++ b/index.html
@@ -209,5 +209,63 @@
         </div>
       </div>
     </section>
+    <!-- Skills Section -->
+    <section class="skills" id="skills">
+      <h2 class="section-title">> loading_skills_module...</h2>
+      <p class="skills-intro">
+        These are the core languages and tools I wield in my developer toolkit —
+        each at varying mastery levels.
+      </p>
+
+      <div class="skills-grid">
+        <div class="skill-card html wizard">
+          <span class="icon">🔶</span>
+          <h3>HTML5</h3>
+          <div class="level-overlay">🧙‍♂️ Wizard</div>
+        </div>
+
+        <div class="skill-card css wizard">
+          <span class="icon">🔷</span>
+          <h3>CSS3</h3>
+          <div class="level-overlay">🧙‍♂️ Wizard</div>
+        </div>
+
+        <div class="skill-card js wizard">
+          <span class="icon">🟡</span>
+          <h3>JavaScript</h3>
+          <div class="level-overlay">🧙‍♂️ Wizard</div>
+        </div>
+
+        <div class="skill-card python wizard">
+          <span class="icon">🐍</span>
+          <h3>Python</h3>
+          <div class="level-overlay">🧙‍♂️ Wizard</div>
+        </div>
+
+        <div class="skill-card java ninja">
+          <span class="icon">☕</span>
+          <h3>Java</h3>
+          <div class="level-overlay">⚔️ Ninja</div>
+        </div>
+
+        <div class="skill-card react ninja">
+          <span class="icon">⚛️</span>
+          <h3>React</h3>
+          <div class="level-overlay">⚔️Ninja</div>
+        </div>
+
+        <div class="skill-card mysql ninja">
+          <span class="icon"></span>
+          <h3>MySQL</h3>
+          <div class="level-overlay">⚔️ Ninja</div>
+        </div>
+
+        <div class="skill-card c apprentice">
+          <span class="icon">🔵</span>
+          <h3>C</h3>
+          <div class="level-overlay">🧪 Apprentice</div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
