created the contact form and finalized the contact me section

--- a/index.html
+++ b/index.html
@@ -299,9 +299,36 @@
           <p>Built with: HTML, CSS, TypeScript</p>
           <a href="https://skimanikings.github.io/Quotes-App/" target="_blank" class="launch-label">Launch Project</a>
         </div>
-
-
       </div>
     </section>
+
+    <!-- Contact Section -->
+<section class="contact" id="contact">
+  <h2 class="section-title">> uplink_ready...</h2>
+  <p class="contact-intro">
+    Got any questions? Send me a message and let's start a conversation.
+  </p>
+  <p class="contact-intro">Initiate secure transmission. Let's connect!</p>
+
+  <form class="contact-form" action="#" method="POST">
+    <div class="form-group">
+      <label for="name">> Full Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full identifier..." required>
+    </div>
+
+    <div class="form-group">
+      <label for="email">> Email Address</label>
+      <input type="email" id="email" name="email" placeholder="Enter your comms address..." required>
+    </div>
+
+    <div class="form-group">
+      <label for="message">> Transmission Message</label>
+      <textarea id="message" name="message" rows="6" placeholder="Type your transmission log..." required></textarea>
+    </div>
+
+    <button type="submit" class="submit-btn">> Submit Transmission</button>
+  </form>
+</section>
+
   </body>
 </html>
