finalized the footer and global styles for the fonts and navbar

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   </head>
   <body>
     <!-- Navbar -->
-    <header>
-      <nav class="nav-container">
-        <!-- Logo on the left -->
-        <div class="logo-container">
-          <img src="images/logo.png" alt="Logo" class="logo" />
-        </div>
+<header>
+  <nav class="nav-container">
+   
+    <div class="logo-container">
+      <img src="images/logo1.png" alt="Logo" class="logo" />
+    </div>
 
-        <!-- Hamburger menu toggle input -->
-        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
 
-        <!-- Hamburger label (icon) -->
-        <label for="nav-toggle" class="hamburger">&#9776;</label>
+    <!-- Hamburger label (icon) -->
+    <label for="nav-toggle" class="hamburger">&#9776;</label>
 
-        <!-- Navigation links -->
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#interests">Interests</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <!-- Navigation links -->
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#interests">Interests</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
     <!-- Hero Section -->
     <section class="hero" id="home">
       <div class="hero-left">
@@ -54,7 +54,7 @@
     </section>
     <!-- About Section -->
     <section class="about" id="about">
-      <h2 class="section-title">Who am I?</h2>
+      <h2 class="section-title">> Who_am_I?...</h2>
       <p class="about-intro">
         I’m not just a coder — I’m a creative thinker, a curious learner, and a
         problem-solver driven by passion. My journey in tech is fueled by a love
@@ -103,7 +103,7 @@
     </section>
     <!-- Educational Background Section -->
     <section class="education" id="education">
-      <h2 class="section-title">Education Timeline</h2>
+      <h2 class="section-title">> Education_Timeline...</h2>
       <p class="education-intro">
         My journey through knowledge has shaped who I am — a digital explorer
         constantly upgrading.
@@ -329,6 +329,24 @@
     <button type="submit" class="submit-btn">> Submit Transmission</button>
   </form>
 </section>
+<!-- Footer Section -->
+<footer class="site-footer">
+  <div class="footer-container">
+    <p class="footer-prompt">> system.shutdown</p>
+
+    <div class="footer-links">
+      <a href="https://github.com/SkimaniKings" target="_blank">GitHub</a>
+      <a href="mailto:kimanisimon856@gmail.com">Email</a>
+      <a href="https://www.linkedin.com/in/simon-kimani-b78963196/" target="_blank">LinkedIn</a>
+    </div>
+
+    <p class="footer-copy">
+      &copy; 2025 Simon Kimani. All transmissions secured.
+    </p>
+
+    <div class="blinking-cursor">_</div>
+  </div>
+</footer>
 
   </body>
 </html>
