--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="Images/logo1.ico" />
   </head>
   <body>
     <!-- Navbar -->
@@ -13,7 +13,7 @@
   <nav class="nav-container">
    
     <div class="logo-container">
-      <img src="images/logo1.png" alt="Logo" class="logo" />
+      <img src="Images/logo1.png" alt="Logo" class="logo" />
     </div>
 
     <input type="checkbox" id="nav-toggle" class="nav-toggle" />
