--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Simon Kimani</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="Images/logo1.ico" />
+    <meta name="description" content="Simon Kimani’s sci-fi portfolio built with HTML & CSS" />
+  <meta property="og:title" content="Simon Kimani – Developer Portfolio" />
+  <meta property="og:url" content="https://simonkimani-portfolio.vercel.app/" />
+
   </head>
   <body>
     <!-- Navbar -->
