edited the education timeline section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="timeline">
         <div class="timeline-item left">
           <div class="timeline-content">
-            <span class="node-label">> node_01: High School</span>
+            <span class="node-label">> High School ...</span>
             <h3>Muranga'a High School</h3>
             <p>
               Graduated with a B+ grade. Laid the foundation for my curiosity in
@@ -127,18 +127,18 @@
 
         <div class="timeline-item right">
           <div class="timeline-content">
-            <span class="node-label">> node_02: Campus</span>
+            <span class="node-label">> Campus ...</span>
             <h3>Kenyatta University</h3>
             <p>
               Bachelor's degree in Statistics and Programming. Built skills in
-              front-end, back-end, and team projects.
+              front-end, back-end, data analysis, and team projects.
             </p>
           </div>
         </div>
 
         <div class="timeline-item left">
           <div class="timeline-content">
-            <span class="node-label">> node_03: Certification</span>
+            <span class="node-label">> Certification ...</span>
             <h3>Moringa School</h3>
             <p>
               Core Bootcamp program in full-stack development. Focused on
