made changes to the navbar to use the logo to navigate to the top of the page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header>
       <nav class="nav-container">
         <div class="logo-container">
+          <a href="#">
           <img src="Images/logo1.png" alt="Logo" class="logo" />
+          </a>
         </div>
 
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
